<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_oscuro"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_lg">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/content_desc_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_lg"
            android:text="@string/runs_history_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/spacing_lg"
        android:paddingBottom="@dimen/spacing_lg">

        <LinearLayout
            android:id="@+id/contenedorCarreras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBorrarTodas"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_lg"
        android:text="@string/runs_delete_all"
        android:textColor="@color/text_error"
        app:cornerRadius="30dp"
        app:strokeColor="@color/text_error" />

</LinearLayout>
